Closed Bug 739033 Opened 13 years ago Closed 13 years ago

external editor (view_source.editor.external) doesn't work on NIGHTLY 14.0a1

Categories

(Toolkit :: View Source, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: bugmozz, Assigned: hsivonen)

Details

(Keywords: regression)

Attachments

(1 file)

Mozilla/5.0 (Windows NT 6.1; rv:14.0) Gecko/20120324 Firefox/14.0a1 ID:20120324031100
I can confirm on Ubuntu1 and Window. In Error Console: Error: Component returned failure code: 0x80004002 (NS_NOINTERFACE) [nsIWebProgress.DOMWindow] Source file: resource:///components/nsLoginManager.js Line: 284 Regression window(m-c) Works: http://hg.mozilla.org/mozilla-central/rev/e9938aab62e2 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120321 Firefox/14.0a1 ID:20120321090441 Fails: http://hg.mozilla.org/mozilla-central/rev/c4eb6151a3bf Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120321 Firefox/14.0a1 ID:20120321115920 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e9938aab62e2&tochange=c4eb6151a3bf Regression window(m-i) Works: http://hg.mozilla.org/integration/mozilla-inbound/rev/4d69dc0ec681 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120321 Firefox/14.0a1 ID:20120321043942 Fails: http://hg.mozilla.org/integration/mozilla-inbound/rev/d07ba367be52 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120321 Firefox/14.0a1 ID:20120321054041 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=4d69dc0ec681&tochange=d07ba367be52 Triggered by: d07ba367be52 Henri Sivonen — Bug 717488 part 1. r=smaug.
OS: Windows 7 → All
Mozilla/5.0 (Windows NT 5.1; rv:14.0) Gecko/20120324 Firefox/14.0a1 ID:20120324031100 It doesn't work on webpages from the internet but it DOES work on webpages on a local HD
Maybe someone fixes this the right way some day, but for now, let's do this.
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Attachment #609286 - Flags: review?(bugs)
Filed bug 739184 about fixing this the right way.
I don't understand this. Who sets view_source.editor.external to true? What is view_source.editor.external?
(In reply to Olli Pettay [:smaug] from comment #5) > I don't understand this. Who sets view_source.editor.external to true? > What is view_source.editor.external? Users who want to use the hidden feature set it. See viewSourceUtils.js. It's for using an external text editor for viewing source. It works together with other view_source.editor.* prefs.
Attachment #609286 - Flags: review?(bugs) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: