Bug 739033 - Allow external View Source editor code live dangerously. r=smaug.